Bug 214672 - Advanced filters are not saved.
Summary: Advanced filters are not saved.
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-15 15:54 UTC by laurentml
Modified: 2009-11-16 15:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description laurentml 2009-11-15 15:54:15 UTC
Version:           2.1 (using KDE 4.3.3)
OS:                Linux
Installed from:    Archlinux Packages

When you create an advanced filter and you click on the button "save filter", it appears in a new tab "filters".
Save your (book) collection and quit tellico.
When you re-open tellico and your collection, the tab "filters" is missing.
Comment 1 Robby Stephenson 2009-11-16 15:53:28 UTC
SVN commit 1050066 by rstephenson:

Make sure to export the filters when saving the file.

BUG:214672


 M  +4 -0      ChangeLog  
 M  +1 -1      src/document.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1050066