Make sure to export the filters when saving the file.

BUG:214672

svn path=/trunk/extragear/office/tellico/; revision=1050066